# Ponzi-Hero

./: Dockerfile  README.md  package.json  pnpm-lock.yaml
anchor/: Anchor.toml
anchor/programs/code_in/: Cargo.toml
anchor/programs/code_in/src/: context.rs  error.rs  lib.rs  state.rs
anchor/programs/counter/: Cargo.toml
anchor/programs/counter/src/: lib.rs
anchor/programs/credit/: Cargo.toml
anchor/programs/credit/src/: lib.rs
anchor/programs/gacha/: Cargo.toml
anchor/programs/gacha/src/: lib.rs
anchor/programs/game/: Cargo.toml
anchor/programs/game/src/: context.rs  error.rs  lib.rs  state.rs
anchor/programs/item/: Cargo.toml
anchor/programs/item/src/: lib.rs
anchor/programs/nft/src/: lib.rs
anchor/programs/play/: Cargo.toml
anchor/programs/play/src/: lib.rs
anchor/programs/shop/: Cargo.toml
anchor/programs/shop/src/: lib.rs
anchor/programs/transfer/: Cargo.toml
anchor/src/: codeIn-exports.ts  counter-exports.ts  credit-exports.ts  gacha-exports.ts  game-exports.ts  index.ts  item-exports.ts  play-exports.ts  transfer-exports.ts
anchor/tests/: counter.spec.ts  credit.ts  gacha.ts  item.spec.ts  item.ts  nft.ts  shop.spec.ts  shop.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/inventory/: page.tsx
src/components/cluster/: cluster-data-access.tsx
src/components/gacha/: gacha-data-access.tsx  gacha-ui.tsx
src/components/game/: game-data-access.tsx  game-feature.tsx  game-ui.tsx
src/components/inventory/: inventory-ui.tsx
src/components/ui/: ui-layout.tsx
src/store/: accountStore.ts  buttonStore.ts  userStore.ts
(+12 files in other folders)
